# RZ-ToolBox-sygisk

./: build.gradle.kts
.github/workflows/: build.yml
module/src/main/cpp/: Android.mk  CMakeLists.txt  module.c
module/template/: customize.sh  module.prop
